# martini

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/: AGENTS.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-24-martini-refactoring-and-bugfixes.md  2026-06-25-markdown-to-word.md
docs/superpowers/specs/: 2026-06-24-martini-refactoring-and-bugfixes-design.md  2026-06-25-markdown-to-word-design.md
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs  ui.rs
src/converter/: batch.rs  image_conv.rs  md_conv.rs  mod.rs  pdf_conv.rs  svg2favicon.rs
tests/: cli.rs
tests/fixtures/: sample.md
