[package]
name = "martini"
version = "0.1.0"
edition = "2024"
authors = ["Lychee Martini <info@lycheemartini.com>"]
description = "A modern, extensible CLI format converter built in Rust and optimized for Agent Skills."
readme = "README.md"
license = "Apache-2.0"
homepage = "https://lycheemartini.com"


[lib]
name = "martini"
path = "src/lib.rs"

[[bin]]
name = "martini"
path = "src/main.rs"

[dependencies]
# CLI Parsing
clap = { version = "4.6.1", features = ["derive", "env"] }

# Graphics and Formats
resvg = "0.47.0"
tiny-skia = "0.11"
image = { version = "0.25.10", default-features = false, features = ["png"] }
ico = "0.5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logs
thiserror = "2.0.18"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
