[package]
name = "martini"
version = "0.1.0"
edition = "2026"
authors = ["Lychee Martini <info@lycheemartini.com>"]
description = "A modern, extensible CLI format converter built in Rust and optimized for Agent Skills."
readme = "README.md"
license = "Apache-2.0"
homepage = "https://lycheemartini.com"


[lib]
name = "martini"
path = "src/lib.rs"

[[bin]]
name = "martini"
path = "src/main.rs"

[dependencies]
# CLI Parsing
clap = { version = "4.6.1", features = ["derive", "env"] }

# Graphics and Formats
resvg = "0.47.0"
tiny-skia = "0.11"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
ico = "0.5.0"
ravif = { version = "0.11.5", default-features = false }
webp = "0.3"
imgref = "1.12.1"
pdfium-render = { version = "0.8.37", features = ["image_025"] }
pdfium-auto = "0.3.0"

# Concurrency & Progress
rayon = "1.10"
indicatif = { version = "0.17.8", features = ["rayon"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logs
thiserror = "2.0.18"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Markdown and Word
docx-rs = "0.4.15"
pulldown-cmark = "0.12.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
